<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/ivBackRegiser"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/R_txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/urbanistbold"
        android:text="@string/forgot_password"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/R_txt_register"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/urbanistbold"
        android:text="@string/desc"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/R_username"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Gray"
            android:fontFamily="@font/urbanistmedium"
            android:hint="Username"
            android:padding="16dp"
            android:textColorHint="@color/GrayDark" />
    </LinearLayout>

    <Button
        android:id="@+id/R_btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_login"
        android:layout_centerHorizontal="true"
        android:width="370dp"
        android:height="40dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/urbanistsemibold"
        android:text="@string/send_link" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/R_btn_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp">

        <TextView
            android:id="@+id/text_below_google_login_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanistmedium"
            android:text="@string/already_have_an_account"
            android:textColor="@color/GrayMediumDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/text_below_google_login_1"
            android:fontFamily="@font/urbanistmedium"
            android:text="@string/login_now"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </RelativeLayout>

</RelativeLayout>
